--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -257,6 +257,13 @@ a {
 
     .App-header {
         display: flex;
+        padding-top: 2vw;
+        transition: padding-top 0.5s ease;
+        /* Adiciona transição suave para a propriedade padding-top */
+    }
+
+    .playing.App-header {
+        display: flex;
         padding-top: 12vw;
     }
 
@@ -298,7 +305,7 @@ a {
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
     position: relative;
-    top: -8.8vw;
+    top: -3.8vw;
     left: 2vw;
 }
 
@@ -1398,7 +1405,7 @@ h3 {
         margin-right: 42vw;
         margin-left: 4vw;
         left: 1vw;
-        top: -2vw;
+        top: -4vw;
         position: relative;
     }
 
