--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1,4 +1,21 @@
-.MenuContainerHeader {}
+.MenuContainerHeader {
+
+    height: 7rem;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logoMenuDivRow.newsPage {
+    top: 4%;
+}
+
+.logoMenuDivRow.playing.newsPage {
+    padding-top: 18vw;
+    top: 1%;
+}
 
 :root {
     /* --cor-primaria: #DC143C;
@@ -12,6 +29,7 @@
     --cor-backgroundClaro: #FFC300;
     --cor-backgroundEscuro: #FF5733;
 }
+
 
 
 html {
@@ -300,8 +318,8 @@ a {
     padding: 0;
     background-color: var(--cor-primaria);
 
-    width: 15vw;
-    height: 9vw;
+    width: 2.5rem;
+    height: 2.5rem;
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
     position: relative;
@@ -319,7 +337,7 @@ a {
 }
 
 .line-container {
-    margin-left: 3vw;
+    margin-left: auto;
 
 }
 
@@ -1120,7 +1138,7 @@ h3 {
 }
 
 .noticiaDetalheDiv {
-    background-color: whitesmoke !important;
+    background-color: white !important;
 }
 
 .meu-conteudo blockquote {
@@ -1315,7 +1333,7 @@ h3 {
         font-weight: 400;
         line-height: normal;
         position: absolute;
-        overflow: hidden;
+
 
         /* Adiciona uma borda branca fina */
     }
@@ -1472,4 +1490,23 @@ h3 {
         margin-top: 0.5vw;
         margin-bottom: 12vw;
     }
+}
+
+.newsPageIcon {
+    color: #541084 !important;
+    /* substitua por sua cor desejada */
+}
+
+.logoMenuDivRow svg.newsPageIcon {
+    color: #541084 !important;
+    /* substitua por sua cor desejada */
+}
+
+svg.newsPageIcon {
+    color: #541084 !important;
+}
+
+.noticiasContainer.playing {
+    padding-top: 4rem;
+    /* ajuste para o valor desejado */
 }
