--- a/src/App.css
+++ b/src/App.css
@@ -92,143 +92,8 @@ a {
   background-color: #541084;
 }
 
-.App::before {
-  /* background-image: url('./bg.svg'); */
-  background: linear-gradient(to bottom, var(--cor-primaria) 4%, var(--cor-secundaria) 100%);
-  background-color: #FFC007;
-  background-position: center 4vw;
-  background-repeat: repeat;
-  background-size: cover;
-  content: "";
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-}
 
-.bodyContainer {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
 
-  position: relative;
-}
-
-.dropsContainer {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: row;
-  height: auto;
-  justify-content: center;
-  margin-top: 1vw;
-  width: auto;
-}
-
-.dropsContainer1 {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  justify-content: center;
-  margin-top: 1vw;
-  width: auto;
-}
-
-.dropsContainerNoticias {
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-}
-
-.dropsContainer {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: row;
-  height: auto;
-  justify-content: center;
-  margin-top: 1vw;
-
-  width: auto;
-}
-
-.dropsContainerNoticias {
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-}
-
-.dropsRowContainer {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  justify-content: center;
-  position: relative;
-  width: auto;
-}
-
-.dropsColumnContainer {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: auto;
-}
-
-.dropsColumnContainer::after {
-  background: white;
-  border-radius: 8px;
-  border-top: 0.5vw solid #ffc007;
-  bottom: -24%;
-  content: "";
-  height: 35%;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  z-index: 4;
-}
-
-.dropsNoArContainer {
-  align-items: center;
-  background-color: #FFC007;
-  border-radius: 24px;
-  display: flex;
-  height: auto;
-  justify-content: center;
-  padding-inline: 1vw;
-  position: absolute;
-  width: auto;
-}
-
-.dropsNoArContainer {
-  color: black;
-  font-family: 'Rubik', sans-serif;
-  font-size: 1vw;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  z-index: 5;
-}
-
-.dropsNoArContainer-0 {
-  bottom: 8%;
-}
-
-.dropsNoArContainer-1 {
-  bottom: 8%;
-}
-
-@media (max-width: 768px) {
-  .dropsNoArContainer-0 {
-    bottom: 9%;
-  }
-
-  .dropsNoArContainer-1 {
-    bottom: 9%;
-  }
-}
 
 .social-link {
   width: 3vw;
@@ -246,7 +111,7 @@ a {
   align-items: center;
   background: linear-gradient(180deg, #541084 0%, #9248FF 100%);
 
-  background-color: #FFC007;
+  /* background-color: #FFC007; */
   display: flex;
   flex-direction: column;
   height: auto;
@@ -306,7 +171,7 @@ a {
   z-index: 100;
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 601px) {
   .App-headerImg3 {
     display: block;
     height: 8vw;
@@ -390,43 +255,7 @@ a {
   z-index: 6;
 }
 
-@media (max-width: 768px) {
-  .dropsFrontCardContainerSpanCartola {
-    top: -22%;
-  }
-}
 
-@media (max-width: 388px) {
-  .dropsFrontCardContainerSpanCartola {
-    top: -22%;
-  }
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.1);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  margin-top: 3vw;
-  text-align: center;
-}
 
 .App-header span {
   color: #FFF;
@@ -479,22 +308,76 @@ a {
   position: relative;
 }
 
-.App-Player {
-  align-items: center;
-  background-color: var(--cor-primaria);
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+.App-Player.home {
+  stroke: none;
+  bottom: auto;
+  top: -15vw !important;
+  width: 100%;
+  transform: scale(1);
+  height: 15vw;
+  padding-top: 0vw;
+  margin-left: 0vw;
+  padding-inline: 0vw;
+  background-color: white;
+  border-radius: 8px;
+  right: 0;
+  padding: 0vw;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  padding-top: 2px;
+  padding-right: 10px;
+  padding-bottom: 0px;
+  padding-left: 10px;
   display: flex;
-  flex-direction: row;
-  height: 9vw;
-  justify-content: center;
-  padding-block: 0.5vw;
-  padding-inline: 2vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
   position: fixed;
-  top: -2vw;
-  transform: scale(0.6);
-  width: auto;
-  z-index: 50;
+  transition: top 0.5s ease, border-radius 0.5s ease;
+  z-index: 999;
+}
+
+.App-Player.playing {
+  stroke: none;
+  bottom: auto;
+  top: 0vw !important;
+  width: 100%;
+  transform: scale(1);
+  height: 15vw;
+  padding-top: 0vw;
+  margin-left: 0vw;
+  padding-inline: 0vw;
+  background-color: white;
+  border-radius: 8px;
+  right: 0;
+  padding: 0vw;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  padding-top: 2px;
+  padding-right: 10px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  display: flex;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  position: fixed;
+  transition: top 0.5s ease, border-radius 0.5s ease;
+  z-index: 999;
 }
 
 .App-Player.principios-editoriais-page {
@@ -715,53 +598,7 @@ a {
   }
 }
 
-@media (min-width: 601px) and (max-width: 854px) {
-  .App-Player {
-    transform: scale(0.9);
-  }
-}
 
-@media (min-width: 854px) and (max-width: 820px) {
-  .App-Player {
-    transform: scale(0.9);
-  }
-}
-
-@media (min-width: 820px) and (max-width: 859px) {
-  .App-Player {
-    transform: scale(0.92);
-  }
-}
-
-@media (min-width: 860px) and (max-width: 988px) {
-  .App-Player {
-    transform: scale(0.92);
-  }
-}
-
-@media (min-width: 989px) and (max-width: 1023px) {
-  .App-Player {
-    transform: scale(0.92);
-  }
-}
-
-@media (min-width: 1024px) and (max-width: 1160px) {
-  .App-Player {
-    transform: scale(0.95);
-  }
-}
-
-@media (min-width: 1161px) and (max-width: 1206px) {
-  .App-Player {
-    transform: scale(0.98);
-  }
-}
-
-@media (min-width: 1207px) and (max-width: 1439px) {
-  .App-Player {
-    transform: scale(0.9);
-  }
-}
 
 .Container-Music-Title {
   display: flex;
@@ -781,19 +618,19 @@ a {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 601px) {
   .Container-Music-Title {
     display: flex;
     flex-direction: column;
     width: auto;
-    max-width: 38vw;
+    max-width: 53vw;
   }
 }
 
 .ContainerMusicSpanPlaying {
   animation: marquee 10s linear infinite;
   color: white;
-
+  overflow: hidden;
   position: relative;
   text-overflow: clip;
   white-space: nowrap;
@@ -863,10 +700,10 @@ a {
 
 .ContainerMusicSpanPlaying span {
   align-items: center;
-  color: white;
+  color: var(--cor-primaria);
   display: flex;
   font-family: 'Rubik', sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 400;
   margin-left: 0vw;
   padding-right: 85%;
@@ -2063,115 +1900,7 @@ a {
   justify-content: space-between;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    gap: 1vw;
-    flex-direction: row;
-    margin-right: 19vw;
-
-  }
-
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-
-    50% {
-      background-position: 100% 50%;
-    }
-
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-
-  .dropsText {
-    display: block;
-    padding-top: 0vw;
-    font-family: 'Rubik', sans-serif;
-    color: var(--cor-terciaria);
-    background: linear-gradient(to right, var(--cor-primaria-clara), white, var(--cor-primaria-clara));
-    background-size: 400% 400%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: gradient 15s ease infinite;
-    font-weight: 200;
-    align-self: center;
-    -webkit-animation: gradient 15s ease infinite;
-  }
-
-  .whiteLine {
-    height: 1px;
-    background-color: white;
-    width: 500vw;
-    animation: gradient 15s ease infinite, blink 5s linear infinite;
-    background: linear-gradient(to right, var(--cor-primaria-clara), white, var(--cor-primaria-clara));
-    background-size: 400% 400%;
-    margin-bottom: 1vw;
-  }
-
-  .dropsText1 {
-    display: block;
-    padding-top: 0vw;
-    font-family: 'Rubik', sans-serif;
-    color: var(--cor-terciaria);
-
-
-    font-weight: 200;
-    align-self: center;
-    margin-top: 6vw;
-  }
-
-
-
-  .dropsText1 {
-    display: block;
-    padding-top: 0vw;
-    font-family: 'Rubik', sans-serif;
-    color: var(--cor-terciaria);
-
-
-    font-weight: 200;
-    align-self: center;
-    margin-top: 6vw;
-  }
-
-  .whiteLine1 {
-    height: 3px;
-    background-color: white;
-    width: 500vw;
-    animation: gradient 15s ease infinite, blink 5s linear infinite;
-    background: linear-gradient(to right, var(--cor-primaria-clara), white, var(--cor-primaria-clara));
-    background-size: 400% 400%;
-    margin-bottom: 1vw;
-  }
-
-  .dropsText2 {
-    display: block;
-    padding-top: 0vw;
-    font-family: 'Rubik', sans-serif;
-    color: var(--cor-terciaria);
-
-
-    font-weight: 200;
-    align-self: center;
-    margin-top: 1vw;
-  }
-
-  .whiteLine2 {
-    height: 1px;
-    background-color: white;
-    width: 500vw;
-    animation: gradient 15s ease infinite, blink 5s linear infinite;
-    background: linear-gradient(to right, var(--cor-primaria-clara), white, var(--cor-primaria-clara));
-    background-size: 400% 400%;
-    margin-bottom: 1vw;
-  }
-
-  .dropsImage {
-
-    display: none;
-  }
+@media (min-width: 601px) {
 
   .backgroundDivContainerNews {
     background-color: var(--cor-primaria);
@@ -2180,11 +1909,10 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 15vw;
+
     z-index: 1;
     width: 100%;
-    padding: 1rem;
-    padding-top: 9rem;
+
 
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
@@ -2192,151 +1920,8 @@ a {
     -o-border-radius: 0px;
   }
 
-  .second-news-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1vw;
-
-  }
-
-  .sub-container.first-news {}
-
-  .sub-container.first-news img {
-    border-radius: 10px;
-    height: 24vw;
-    object-fit: cover;
-    width: 42vw;
-  }
-
-  .sub-container.second-news {
-    /* Estilos para as outras notícias quando a largura da tela for de até 1024px */
-  }
-
-  .center-div.first-news {
-    align-items: center;
-    background-color: var(--cor-terciaria);
-    border-radius: 8px;
-    border-top: 6px solid var(--cor-primaria);
-    bottom: -41%;
-    display: flex;
-    height: 10vw;
-    justify-content: center;
-    left: 50%;
-    padding-block: 0px;
-    position: absolute;
-    transform: translate(0%, 0%);
-    width: 100%;
-    z-index: -1;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-  }
-
-  .center-divP-bigode {
-    color: var(--cor-primaria);
-    font-family: 'Rubik', sans-serif;
-    font-size: 0.8vw;
-    margin-inline: 1vw;
-    text-align: left;
-    font-weight: 200;
-    margin-top: 4px;
-    display: block;
-  }
-
-  .first-news .title-bigode-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    padding-block: -0px;
-  }
-
-  .title-bigode-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    /* Ajuste este valor conforme necessário */
-    padding-block: 8px;
-  }
-
-  .center-divP-date {
-    color: var(--cor-primaria);
-    font-family: 'Rubik', sans-serif;
-    font-size: 1vw;
-    margin-inline: 1vw;
-    text-align: left;
-    font-weight: 200;
-    margin-top: 10px;
-
-    display: block;
-    opacity: 0.5;
-  }
-
-
-
-  .first-news .center-divP {
-    color: var(--cor-primaria);
-    font-family: 'Rubik', sans-serif;
-    font-size: 1.2vw;
-    margin-inline: 2vw;
-    text-align: center;
-    margin: 0vw;
-    margin-top: 3vw;
-    padding-top: 2vw;
-    padding-bottom: 8px;
-  }
-
-  .center-div.second-news {
-    align-items: center;
-    background-color: white;
-    border-radius: 8px;
-    border-top: 6px solid var(--cor-terciaria);
-    bottom: -23%;
-    display: flex;
-    height: 98%;
-    justify-content: center;
-    left: 105%;
-    padding-block: 1.5vw;
-    position: absolute;
-    transform: translate(-0%, -25%);
-    width: 120%;
-    -webkit-transform: translate(-0%, -25%);
-    -moz-transform: translate(-0%, -25%);
-    -ms-transform: translate(-0%, -25%);
-    -o-transform: translate(-0%, -25%);
-  }
-
-  .absolute-div.first-news {
-    align-items: center;
-    align-self: center;
-    background-color: var(--cor-primaria);
-    border-radius: 8px;
-    display: flex;
-
-    height: 2vw;
-    justify-content: center;
-    position: absolute;
-    top: -1vw;
-    z-index: 5;
-    display: none;
-  }
-
-  .absolute-div.second-news {
-    /* Estilos para o div absoluto das outras notícias quando a largura da tela for de até 1024px */
-  }
 }
 
-.whiteLine1 {
-  height: 2px;
-  background-color: white;
-  width: 8%;
-  margin-top: 2vw;
-  margin-bottom: 8vw;
-
-}
 
 .sub-container {
   position: relative;
@@ -2624,10 +2209,10 @@ a {
 .loader,
 .pause-circle,
 .play-circle {
-  color: white;
-  height: 6vw;
+  color: var(--cor-primaria);
+  font-size: 5rem;
   margin-right: 1vw;
-  width: 6vw;
+
 }
 
 .home .DotsPlayer {
@@ -3471,6 +3056,17 @@ a {
 .menuOpenContainerColumn h1 {
   color: white;
   text-align: center;
+  padding: 0rem !important;
+  font-size: 30px !important;
+  font-family: Rubik !important;
+  letter-spacing: -0.1px !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  line-height: normal !important;
+  padding-top: 3vw !important;
+  line-height: 31.6px !important;
+  width: 100% !important;
+  padding-inline: 0rem !important;
 }
 
 .footerSocialMediaContainer {
@@ -3494,7 +3090,7 @@ a {
 .h1StyleDrops {
   color: white;
   text-align: center;
-  margin-top: 1rem;
+ 
 }
 
 .whiteLine {
@@ -3622,7 +3218,7 @@ a {
 
 .mapImg {
   position: absolute;
-  top: -2%;
+  top: -7%;
   right: 0;
   z-index: 555;
   width: auto;
@@ -3847,5 +3443,56 @@ a {
 
   100% {
     opacity: 1;
+  }
+}
+
+.loader-container1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #541084;
+  position: relative;
+}
+
+.loader-logo {
+  position: absolute;
+  height: 8rem;
+  width: auto;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.loader-bar {
+  flex-grow: 1;
+  width: 1px;
+  height: 20px;
+  background-color: white;
+  margin: 2.3px;
+  border-radius: 3px;
+  animation: barAnimation 1s infinite ease-in-out;
+  animation-delay: var(--delay, 0s);
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  -webkit-animation: barAnimation 1s infinite ease-in-out;
+  -webkit-animation-delay: var(--delay, 0s);
+}
+
+@keyframes barAnimation {
+
+  0%,
+  100% {
+    height: 10px;
+  }
+
+  50% {
+    height: 50px;
   }
 }
