--- a/src/Contato.css
+++ b/src/Contato.css
@@ -328,13 +328,13 @@
 
     .contatoContainer img {
         position: relative;
-        width: 100%;
-        height: 100%;
-        display: flex;
+
+
+        /* display: flex; */
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 1rem;
+        /* margin-bottom: 1rem; */
     }
 }
 
@@ -369,6 +369,11 @@
     height: 4rem;
     margin: 2rem;
     background-color: #D9D9D9;
+    margin-top: 7rem;
+}
+
+.containerPropaganda.playing {
+    margin-top: 15rem;
 }
 
 .box {
