--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1188,8 +1188,8 @@ h3 {
     .containerColuna1 img,
     .containerColuna2 img,
     .containerColuna3 img {
-        width: 26vw;
-        height: 18vw;
+        width: 42vw;
+        height: 22vw;
         object-fit: cover;
         border-radius: 10px;
         margin-bottom: 0.5vw;
@@ -1227,7 +1227,7 @@ h3 {
 
         margin: 0 0;
         font-family: 'Rubik', sans-serif;
-        font-size: 8px;
+        font-size: 12px;
         color: var(--cor-primaria);
         font-style: normal;
         font-weight: 400;
@@ -1238,8 +1238,8 @@ h3 {
 
         margin: 0 0;
         font-family: 'Rubik', sans-serif;
-
-        font-size: 9.8px;
+        letter-spacing: -0.4px;
+        font-size: 11px;
         font-style: normal;
         font-weight: 200;
         width: 85%;
